# beca-evc-2024

./: .gitignore  README.md
chacras-softsim/: README.md  chacras.c  chacras_slave  chacras_slave.c  chacras_state.json  start_sim.sh
demo/beca_evc_demo/: beca_evc_demo_0.mcap  metadata.yaml
ejercicios-ros/ejercicio-2/src/comms_basicas/: package.xml  setup.cfg  setup.py
ejercicios-ros/ejercicio-2/src/comms_basicas/comms_basicas/: monitor.py  sensor_falso.py
notes/ros-notes/.obsidian/: workspace.json
notes/ros-notes/teoría/: T02 - Creación de nodos python.md  T03 - Topics, publishers y subscribers.md
references/stm32_bluepill/tests/blue-pill-test/stm32f1-baremetal/blink/: Makefile
references/stm32_bluepill/tests/blue-pill-test/stm32f1-baremetal/blink/src/: main.c
rodo-bindings/: README.md  chacras.py  chacras_state.json  master  start_sim.sh
src/bluepill-sim/: chacras_slave.c  init_sim.sh  kill_sim.sh
src/chacras_driver/: package.xml  setup.cfg  setup.py
src/chacras_driver/chacras_driver/: chacras_driver.py  modbus_client.py  teleop_keyboard.py
src/chacras_driver/config/: chacras_params.yaml
src/chacras_driver/launch/: chacras_driver.launch.py
src/chacras_interfaces/: CMakeLists.txt  package.xml
src/chacras_interfaces/msg/: MotorCmd.msg  MotorState.msg  MotorStateArray.msg  SystemStatus.msg
